# Controller

./: .gitignore  CMakeLists.txt  Controller.sln  README.md  commands.hpp  secret.h
Attacker/: CMakeLists.txt  attacker.cpp  attacker.hpp  main.cpp  scroller.hpp  tui.cpp  tui.hpp
BadUSB/: platformio.ini
BadUSB/src/: main.cpp
Controller/: Controller.vcxproj  Controller.vcxproj.filters  client.h  controller.cpp  controller.h  main.cpp  server.cpp  server.h
Controller-client/: Controller-client.vcxproj  Controller-client.vcxproj.filters  info.txt
Controller-client/src/: main.cpp
Controller-server/: Controller-server.vcxproj  Controller-server.vcxproj.filters
Controller-server/src/: main.cpp  server.cpp  server.h
Server/: CMakeLists.txt  Server.vcxproj  Server.vcxproj.filters  client.h  log.txt  main.cpp  server.cpp  server.h  server.hpp
Server/src/: main.cpp  udpClient.hpp
Victim/: CMakeLists.txt  Victim.vcxproj  Victim.vcxproj.filters  cmdSession.hpp  main.cpp  vcontext.txt  victim.cpp  victim.h  victim.hpp
Website/: index.css  index.html  index.js
pcServer/: client.h  main.cpp  pcServer.vcxproj  pcServer.vcxproj.filters  server.cpp  server.h  tunnel.h
